# elf-loader

./: .clang-format  CMakeLists.txt  README.md  flake.nix  shell.nix
.devcontainer/: Dockerfile  devcontainer.json
src/: lib.cpp  main.cpp
src/elf/: header.cpp  lib.cpp  pheader.cpp  util.cpp
src/util/: lib.cpp
